--- a/index.html
+++ b/index.html
@@ -8,5 +8,67 @@
   <body>
     <h1>ハンドルネーム</h1>
     <p>かぐら</p>
+    
+    <h2>About</h2>
+    <p>
+      簡単な自己紹介やアピール。<br>
+      どんなことができる、したいのか。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>かぐら</li>
+      <li>長野県</li>
+      <li>Webサイトの管理・編集</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <td>Windows</td>
+      </tr>
+      <tr>
+        <th>Engine, Frameworks</th>
+        <td>Node.js</td>
+      </tr>
+      <tr>
+        <th>Tool, MiddleWare</th>
+        <td>Github</td>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td>ITパスポート</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>アピールできる活動内容を書きましょう。</p>
+    <ul>
+      <li><a href="https://github.com/">GitHub</a></li>
+      <li>
+        作った作品
+        <ul>
+          <li><a href="https://example.com/">作品 1</a></li>
+          <li><a href="https://example.com/">作品 2</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>連絡先や SNS のアカウントを書きましょう。</p>
+    <ul>
+      <li><a href="mailto:name@example.com">Mail</a></li>
+      <li><a href="https://x.com/kagura38729581?s=21">kagura</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>学歴、職歴、アルバイト、インターン経験など。</p>
+    <table>
+      <tr>
+        <th>2018 年</th>
+        <td>一般企業へ 入社</td>
+      </tr>
+    </table>
   </body>
 </html>
