style.cssのリンクを追加

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>かぐらのポートフォリオ</title>
   </head>
+  <link href="style.css" rel="stylesheet">
   <body>
     <h1>ハンドルネーム</h1>
     <p>かぐら</p>
